2004-09-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* CTRL+U = edit circuit symbol
	* F5 = show last message
	* fixed bug that prevents default circuit symbol to be
	drawn
	* new entry in mouse menu: "delete group"
	* fixed bug that didn't copy node labels

2004-09-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* subcircuit symbols can be defined by the user

2004-09-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* correct cursor symbols at zoom

2004-09-15  Stefan Jahn  <stefan@lkcc.org>

	* qucs_de.ts: Updated german translation.

	* Makefile.am (%.ts): Added translations of qucs-help and
	qucs-edit.

2004-09-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* added new painting: Elliptic Arc

2004-09-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Documented some new mathematical
	operations for equations.

2004-08-31  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* dialogs/messagebox.cpp (MessageBox): Changed
	'DiscardAll' to 'Discard all'.

	* qucs.cpp (QucsApp): Removed file extensions from
	translations.

2004-08-30  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/diagram.cpp: Including headers for finite().

	* qucsinit.cpp (slotHelpAbout): Fixed typo.

	* qucs_ro.ts: Preliminary checkin of romanian translation.

	* qucs_de.ts: Updated german translation.

2004-08-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* qucsdoc.cpp: changed the "copy..." functions

2004-08-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* diagrams/graph: Using malloc to store screen points.
	* many small improvements
	* "Close Project" and "Print Selected Elements" operation

2004-08-23  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/markerdialog.cpp (MarkerDialog): Set maximum
	precision value to 12 (for Qt versions where the QIntValidator
	really works).

	* diagrams/graph.h: Using QValueVector for storing screen
	points.  This fixes a bug when large dotted graphs occurred.
