@@ -3548,6 +3548,14 @@ Continuare ?</translation>
         <source>Cannot delete the open file: </source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Edit Circuit Symbol</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Edit Schematic</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsEdit</name>
