@@ -2526,6 +2526,14 @@ Erros:
         <source>Cannot delete the open file: </source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Edit Circuit Symbol</source>
+        <translation type="unfinished">Editar Símbolo do Circuito</translation>
+    </message>
+    <message>
+        <source>Edit Schematic</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsEdit</name>
