@@ -2589,6 +2589,14 @@ Erori:
         <source>Cannot delete the open file: </source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Edit Circuit Symbol</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Edit Schematic</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsEdit</name>
